# mynum

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
benches/: comparative_bench.rs  multiplication_bench.rs
examples/: advanced_math.rs  advanced_parallel_demo.rs  basic_demo.rs  basic_usage.rs  black_scholes.rs  complex_advanced_demo.rs  complex_basic_demo.rs  complex_demo.rs  comprehensive_demo.rs  config_test.rs  cordic_demo.rs  hyperbolic_demo.rs  integrated_parallel_demo.rs  ln_precision_demo.rs  parallel_demo.rs  parallel_fft_demo.rs  parallel_performance_test.rs  random_demo.rs  rsa_demo.rs  simple_parallel_test.rs  special_functions_demo.rs  threshold_calibration.rs  trigonometric_demo.rs
fuzz/: Cargo.toml
fuzz/artifacts/mpz_arithmetic/: crash-35e62fc6f2b7f3202cd2c29df5441442192a45e3  crash-429d5b89b732a97a528386d6e6c1e73f676b7d88
fuzz/fuzz_targets/: mpf_parse.rs  mpz_arithmetic.rs
python/: Cargo.toml
python/src/: lib.rs
src/: algorithm.rs  config.rs  error.rs  lib.rs  profile.rs
src/complex/: arithmetic.rs  config.rs  core.rs  exponential.rs  functions.rs  hyperbolic.rs  integration.rs  mod.rs  polynomial.rs  trigonometry.rs
src/linalg/: decomposition.rs  matrix.rs  mod.rs
src/mpf/: adaptive.rs  arithmetic.rs  comparison.rs  config.rs  constants.rs  conversion.rs  cordic.rs  core.rs  differentiation.rs  elementary.rs  integration.rs  (+5 more)
tests/: precision_elementary.rs  precision_integration.rs  precision_linalg.rs  precision_mpf.rs  precision_mpz.rs  precision_special.rs  stability_test.rs  stress_edge.rs  vulnerability_tests.rs
(+14 files in other folders)
