[package]
name = "mynum"
version = "0.5.3"
edition = "2021"
authors = ["gA4ss <weya1182@colorado.edu>"]
description = "High-precision arbitrary-precision arithmetic: Mpz (integer), Mpf (float), Complex, 68+ special functions, linear algebra, signal processing"
license = "MIT"
repository = "https://github.com/gA4ss/mynum"
readme = "README.md"
keywords = ["arbitrary-precision", "bignum", "math", "numeric", "special-functions", "linear-algebra"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
rand = "0.8"
num-traits = "0.2"
rayon = { version = "1.7", optional = true }

[features]
default = ["std", "rand-std"]
std = []
parallel = ["dep:rayon"]
rand-std = ["rand/std", "rand/std_rng"]

[dev-dependencies]
rug = { version = "1.24", features = ["integer", "float"] }
criterion = "0.5"
num-bigint = "0.4"

[[bench]]
name = "multiplication_bench"
harness = false

[lib]
name = "mynum"
path = "src/lib.rs"
